# G00gle-thalli

./: .gitignore  CMakeLists.txt  README.md  build_log.txt  output_L2_FULL_SUCCESS.mlir  output_L2_SUCCESS.mlir  output_L3_SUCCESS.mlir  output_SUCCESS.mlir  output_just_linalg.mlir  output_optimized_test.mlir  temp_linalg.mlir  test_basic_check.mlir  test_cpp_basic.mlir  test_cpp_optimized.mlir  test_opt_check.mlir  test_output.txt
benchmarks/: BENCHMARK_GUIDE.md  QUICK_REFERENCE.md  README.md  run_all_benchmarks.ps1
docs/: COMMANDS_REFERENCE.md  CPP_MODEL_COMPILED_CODE_INTEGRATION.md  GPU_PIPELINE_README.md  (+18 more)
test/: CMakeLists.txt  benchmark_native.cpp  imp.txt  imp1.md  test5.mlir  test5_output.mlir  test_activations.mlir  test_add_only.mlir  test_all_22_ops.mlir  test_all_26_ops.mlir  test_all_30_ops.mlir  test_all_working.mlir  test_binary_all.mlir  test_comprehensive.mlir  test_concat.mlir  test_dequant.mlir  test_edge_cases.mlir  test_elementwise.mlir  test_extreme_l3_e2e.mlir  test_final.mlir  test_fixed_ops.mlir  test_integration_phase1.cpp  test_lowering.mlir  test_lowering_simple.mlir  test_matmul.mlir  test_matmul_bias_relu.mlir  test_matmul_bias_relu_l1_tiling.mlir  test_matmul_l1_alt.mlir  test_matmul_l1_correct.mlir  test_matmul_l1_simple.mlir  test_matmul_l1_tiling.mlir  test_matmul_l2_embedded.mlir  test_matmul_l2_tiling.mlir  test_matmul_l3_tiling.mlir  test_matmul_no_transform.mlir  test_matmul_runtime.cpp  test_matmul_simple.mlir  test_minimal.mlir  test_new_ops.mlir  test_quick_phase1.cpp  (+9 more)
tools/google-opt/: CMakeLists.txt  google-opt.cpp
(+42 files in other folders)
